--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&family=Shrikhand&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-    <h1>ohmyfood</h1>
+    <header>
+        <h1>ohmyfood</h1>
+    </header>
+
 </body>
 </html>
