Create buttons components and style

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <header>
         <h1>ohmyfood</h1>
     </header>
-
+    <button class="btn">Explorer nos restaurants</button>
 </body>
 </html>
