Location html css

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&family=Shrikhand&display=swap"
           rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8435413581.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <h1>ohmyfood</h1>
     </header>
+    <div class="location"><i class="fa-solid fa-location-dot"></i> <p>Paris, Belleville </p></div>
     <button class="btn">Explorer nos restaurants</button>
 </body>
 </html>
