--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>OhMyFood</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&family=Shrikhand&display=swap"
@@ -15,6 +15,11 @@
         <h1>ohmyfood</h1>
     </header>
     <div class="location"><i class="fa-solid fa-location-dot"></i> <p>Paris, Belleville </p></div>
-    <button class="btn">Explorer nos restaurants</button>
+    <section class="description">
+        <h2>Réservez le menu qui vous convient</h2>
+        <p>Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
+        <button class="btn">Explorer nos restaurants</button>
+    </section>
+
 </body>
 </html>
