--- a/index.html
+++ b/index.html
@@ -14,12 +14,34 @@
     <header>
         <h1>ohmyfood</h1>
     </header>
-    <div class="location"><i class="fa-solid fa-location-dot"></i> <p>Paris, Belleville </p></div>
-    <section class="description">
-        <h2>Réservez le menu qui vous convient</h2>
-        <p>Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
-        <button class="btn">Explorer nos restaurants</button>
-    </section>
+    <main>
+        <div class="location"><i class="fa-solid fa-location-dot"></i> <p>Paris, Belleville </p></div>
+        <section class="description">
+            <h2>Réservez le menu qui vous convient</h2>
+            <p>Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
+            <button class="btn">Explorer nos restaurants</button>
+        </section>
+        <section class="functioning content--padding">
+            <h3>Fonctionnement</h3>
+            <div class="functioning__card">
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                Choisissez un restaurant
+                <div class="functioning__card__index">1</div>
+            </div>
+            <div class="functioning__card">
+                <i class="fa-solid fa-list-ul"></i>
+                Composez votre menu
+                <div class="functioning__card__index">2</div>
+            </div>
+            <div class="functioning__card">
+                <i class="fa-solid fa-store"></i>
+                Dégustez au restaurant
+                <div class="functioning__card__index">3</div>
+            </div>
+
+        </section>
+    </main>
+
 
 </body>
 </html>
