Functioning active and start restaurant html

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
                 Composez votre menu
                 <div class="functioning__card__index">2</div>
             </div>
-            <div class="functioning__card">
+            <div class="functioning__card functioning__card--active">
                 <i class="fa-solid fa-store"></i>
                 Dégustez au restaurant
                 <div class="functioning__card__index">3</div>
             </div>
-
+        </section>
+        <section class="restaurant content--padding">
+            <h3>Restaurant</h3>
         </section>
     </main>
 
