Restaurant html and css, heart:hover animation

--- a/index.html
+++ b/index.html
@@ -41,6 +41,57 @@
         </section>
         <section class="restaurant content--padding">
             <h3>Restaurant</h3>
+            <article class="restaurant__card restaurant__card--new">
+                <div class="restaurant__card__img"></div>
+                <div class="restaurant__card__info">
+                    <div>
+                        <p>La note enchantée</p>
+                        <p>Charonne</p>
+                    </div>
+                    <i class="fa-regular fa-heart">
+                        <i class="fa-solid fa-heart "></i>
+                    </i>
+
+                </div>
+            </article>
+            <article class="restaurant__card restaurant__card--new">
+                <div class="restaurant__card__img"></div>
+                <div class="restaurant__card__info">
+                    <div>
+                        <p>A la française</p>
+                        <p>Cité Rouge</p>
+                    </div>
+                     <i class="fa-regular fa-heart">
+                        <i class="fa-solid fa-heart "></i>
+                    </i>
+                </div>
+            </article>
+            <article class="restaurant__card">
+                <div class="restaurant__card__img"></div>
+                <div class="restaurant__card__info">
+                    <div>
+                        <p>Le délice des sens</p>
+                        <p>Folie-Méricourt</p>
+                    </div>
+                     <i class="fa-regular fa-heart">
+                        <i class="fa-solid fa-heart "></i>
+                    </i>
+                </div>
+            </article>
+            <article class="restaurant__card">
+                <div class="restaurant__card__img"></div>
+                <div class="restaurant__card__info">
+                    <div>
+                        <p>La palette du goût</p>
+                        <p>Ménilmontant</p>
+                    </div>
+                     <i class="fa-regular fa-heart">
+                        <i class="fa-solid fa-heart "></i>
+                    </i>
+                </div>
+            </article>
+
+
         </section>
     </main>
 
