--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>ohmyfood</h1>
+        <h1 id="title">ohmyfood</h1>
     </header>
     <main>
         <div class="location"><i class="fa-solid fa-location-dot"></i> <p>Paris, Belleville </p></div>
@@ -90,10 +90,17 @@
                     </i>
                 </div>
             </article>
-
-
         </section>
     </main>
+    <footer class="footer">
+        <p class="footer__title"><a href="#title" >ohmyfood</a></p>
+        <ul class="footer__list">
+            <li class="footer__list__item"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+            <li class="footer__list__item"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+            <li class="footer__list__item footer__list__item--lighter">Mentions légales</li>
+            <li class="footer__list__item footer__list__item--lighter">Contact</li>
+        </ul>
+    </footer>
 
 
 </body>
