Add link around restaurant__card

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </section>
         <section class="restaurant content--padding">
             <h3>Restaurant</h3>
+            <a href="#">
             <article class="restaurant__card restaurant__card--new">
                 <div class="restaurant__card__img"></div>
                 <div class="restaurant__card__info">
@@ -51,21 +52,24 @@
                     <i class="fa-regular fa-heart">
                         <i class="fa-solid fa-heart "></i>
                     </i>
-
                 </div>
             </article>
-            <article class="restaurant__card restaurant__card--new">
-                <div class="restaurant__card__img"></div>
-                <div class="restaurant__card__info">
-                    <div>
-                        <p>A la française</p>
-                        <p>Cité Rouge</p>
+            </a>
+            <a href="#">
+                <article class="restaurant__card restaurant__card--new">
+                    <div class="restaurant__card__img"></div>
+                    <div class="restaurant__card__info">
+                        <div>
+                            <p>A la française</p>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <i class="fa-regular fa-heart">
+                            <i class="fa-solid fa-heart "></i>
+                        </i>
                     </div>
-                     <i class="fa-regular fa-heart">
-                        <i class="fa-solid fa-heart "></i>
-                    </i>
-                </div>
-            </article>
+                </article>
+            </a>
+            <a href="#">
             <article class="restaurant__card">
                 <div class="restaurant__card__img"></div>
                 <div class="restaurant__card__info">
@@ -78,6 +82,8 @@
                     </i>
                 </div>
             </article>
+            </a>
+            <a href="#">
             <article class="restaurant__card">
                 <div class="restaurant__card__img"></div>
                 <div class="restaurant__card__info">
@@ -90,6 +96,7 @@
                     </i>
                 </div>
             </article>
+            </a>
         </section>
     </main>
     <footer class="footer">
