Create french.html and adjust header : positioning the arrow left

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1 id="title">ohmyfood</h1>
     </header>
     <main>
@@ -55,7 +55,7 @@
                 </div>
             </article>
             </a>
-            <a href="#">
+            <a href="french.html">
                 <article class="restaurant__card restaurant__card--new">
                     <div class="restaurant__card__img"></div>
                     <div class="restaurant__card__info">
