--- a/french.html
+++ b/french.html
@@ -13,7 +13,14 @@
 <body>
     <header class="header">
         <h1>ohmyfood</h1>
-        <i class="fa-solid fa-arrow-left"></i>
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
     </header>
+    <div class="presentation__img"></div>
+    <main>
+        <div class="detail__title">
+            <h2>À la française</h2>
+            <i class=" fa-regular fa-heart"></i>
+        </div>
+    </main>
 </body>
 </html>
