--- a/french.html
+++ b/french.html
@@ -16,12 +16,12 @@
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
     </header>
     <div class="presentation__img"></div>
-    <main>
+    <main >
         <div class="detail__title">
             <h2>À la française</h2>
             <i class=" fa-regular fa-heart"></i>
         </div>
-        <section>
+        <section class="content--padding">
             <article class="menu">
                 <h3>ENTRÉES</h3>
                 <div class="menu__card">
