Add scss for menu

--- a/french.html
+++ b/french.html
@@ -21,28 +21,28 @@
             <h2>À la française</h2>
             <i class=" fa-regular fa-heart"></i>
         </div>
-        <section class="content--padding">
+        <section class="content--padding background--color">
             <article class="menu">
                 <h3>ENTRÉES</h3>
                 <div class="menu__card">
                     <p class="menu__card__title">Tartare de poulpe acidulé</p>
                     <div class="menu__card__infos">
                         <p>Au zeste d'orange</p>
-                        <p>25€</p>
+                        <div>25€</div>
                     </div>
                 </div>
                 <div class="menu__card">
                     <p class="menu__card__title">Velouté de légumes d'antan</p>
                     <div class="menu__card__infos">
                         <p>Carotte, panais, topinambour</p>
-                        <p>35€</p>
+                        <div>35€</div>
                     </div>
                 </div>
                 <div class="menu__card">
                     <p class="menu__card__title">Soupe à l'oignon</p>
                     <div class="menu__card__infos">
                         <p>Revisitée</p>
-                        <p>20€</p>
+                        <div>20€</div>
                     </div>
                 </div>
             </article>
