--- a/french.html
+++ b/french.html
@@ -21,7 +21,7 @@
             <h2>À la française</h2>
             <i class=" fa-regular fa-heart"></i>
         </div>
-        <section class="content--padding background--color">
+        <section class="content--padding--soft background--color">
             <article class="menu">
                 <h3>ENTRÉES</h3>
                 <div class="menu__card">
@@ -43,6 +43,58 @@
                     <div class="menu__card__infos">
                         <p>Revisitée</p>
                         <div>20€</div>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section class="content--padding background--color">
+            <article class="menu">
+                <h3>PLATS</h3>
+                <div class="menu__card">
+                    <p class="menu__card__title">Coquilles Saint-Jacques</p>
+                    <div class="menu__card__infos">
+                        <p>Accompagnées d'une purée de panais</p>
+                        <div>40€</div>
+                    </div>
+                </div>
+                <div class="menu__card">
+                    <p class="menu__card__title">Magret de canard</p>
+                    <div class="menu__card__infos">
+                        <p>Et parmentier de pommes de terres</p>
+                        <div>35€</div>
+                    </div>
+                </div>
+                <div class="menu__card">
+                    <p class="menu__card__title">Pigeonneau d'Ille-et-Villaine</p>
+                    <div class="menu__card__infos">
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <div>44€</div>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section class="content--padding background--color">
+            <article class="menu">
+                <h3>DESSERTS</h3>
+                <div class="menu__card">
+                    <p class="menu__card__title">Pétales de violletes glacés</p>
+                    <div class="menu__card__infos">
+                        <p>Et purée de noisettes</p>
+                        <div>18€</div>
+                    </div>
+                </div>
+                <div class="menu__card">
+                    <p class="menu__card__title">Fondant au chocolat</p>
+                    <div class="menu__card__infos">
+                        <p>Revisité</p>
+                        <div>22€</div>
+                    </div>
+                </div>
+                <div class="menu__card">
+                    <p class="menu__card__title">Millefeuille croustillant</p>
+                    <div class="menu__card__infos">
+                        <p>Myrtilles et pâte d'amande</p>
+                        <div>23€</div>
                     </div>
                 </div>
             </article>
