--- a/french.html
+++ b/french.html
@@ -16,12 +16,12 @@
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
     </header>
     <div class="presentation__img"></div>
-    <main >
+    <main class="detail" >
         <div class="detail__title">
             <h2>À la française</h2>
             <i class=" fa-regular fa-heart"></i>
         </div>
-        <section class="content--padding--soft background--color">
+        <section class="content--padding--soft">
             <article class="menu">
                 <h3>ENTRÉES</h3>
                 <div class="menu__card">
@@ -47,7 +47,7 @@
                 </div>
             </article>
         </section>
-        <section class="content--padding background--color">
+        <section class="content--padding--soft background--color">
             <article class="menu">
                 <h3>PLATS</h3>
                 <div class="menu__card">
@@ -73,7 +73,7 @@
                 </div>
             </article>
         </section>
-        <section class="content--padding background--color">
+        <section class="content--padding--soft background--color">
             <article class="menu">
                 <h3>DESSERTS</h3>
                 <div class="menu__card">
@@ -99,6 +99,7 @@
                 </div>
             </article>
         </section>
+        <button class="btn ">Commander</button>
     </main>
 </body>
 </html>
