Add footer and button change

--- a/french.html
+++ b/french.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>ohmyfood</h1>
+        <h1 id="title">ohmyfood</h1>
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
     </header>
     <div class="presentation__img"></div>
@@ -101,5 +101,14 @@
         </section>
         <button class="btn ">Commander</button>
     </main>
+    <footer class="footer">
+        <p class="footer__title"><a href="#title" >ohmyfood</a></p>
+        <ul class="footer__list">
+            <li class="footer__list__item"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+            <li class="footer__list__item"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+            <li class="footer__list__item footer__list__item--lighter">Mentions légales</li>
+            <li class="footer__list__item footer__list__item--lighter">Contact</li>
+        </ul>
+    </footer>
 </body>
 </html>
