Create Subpages folder : note.html, button style

--- a/SubPages/note.html
+++ b/SubPages/note.html
@@ -2,47 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ohmyfood - A la française</title>
+    <title>Ohmyfood - La note enchantée</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&family=Shrikhand&display=swap"
           rel="stylesheet">
     <script src="https://kit.fontawesome.com/8435413581.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="header">
         <h1 id="title">ohmyfood</h1>
-        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
     </header>
     <div class="presentation__img"></div>
     <main class="detail" >
         <div class="detail__title">
-            <h2>À la française</h2>
+            <h2>La note enchantée</h2>
             <i class=" fa-regular fa-heart"></i>
         </div>
         <section class="content--padding--soft">
             <article class="menu">
                 <h3>ENTRÉES</h3>
                 <div class="menu__card">
-                    <p class="menu__card__title">Tartare de poulpe acidulé</p>
+                    <p class="menu__card__title">Ravioles de foie gras</p>
                     <div class="menu__card__infos">
-                        <p>Au zeste d'orange</p>
+                        <p>Accompagnés de leur crème à la truffe</p>
                         <div>25€</div>
                     </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Velouté de légumes d'antan</p>
+                    <p class="menu__card__title">Caviar osciètre</p>
                     <div class="menu__card__infos">
-                        <p>Carotte, panais, topinambour</p>
+                        <p>Sur blini à la farine de blé noir</p>
                         <div>35€</div>
                     </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Soupe à l'oignon</p>
+                    <p class="menu__card__title">Homard et espuma de comté</p>
                     <div class="menu__card__infos">
-                        <p>Revisitée</p>
+                        <p>Mariné aux zests d'orange</p>
                         <div>20€</div>
+                    </div>
+                </div>
+                <div class="menu__card">
+                    <p class="menu__card__title">Foie gras de canard cuit entier</p>
+                    <div class="menu__card__infos">
+                        <p>Confiture de figue et pain toasté</p>
+                        <div>35€</div>
                     </div>
                 </div>
             </article>
@@ -51,23 +58,23 @@
             <article class="menu">
                 <h3>PLATS</h3>
                 <div class="menu__card">
-                    <p class="menu__card__title">Coquilles Saint-Jacques</p>
+                    <p class="menu__card__title">Noix de coquilles Saint-Jacques</p>
                     <div class="menu__card__infos">
-                        <p>Accompagnées d'une purée de panais</p>
+                        <p>Sur lit de purée de céleri-rave</p>
                         <div>40€</div>
                     </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Magret de canard</p>
+                    <p class="menu__card__title">Langoustine poêlée</p>
                     <div class="menu__card__infos">
-                        <p>Et parmentier de pommes de terres</p>
+                        <p>Purée de patate douce</p>
                         <div>35€</div>
                     </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Pigeonneau d'Ille-et-Villaine</p>
+                    <p class="menu__card__title">Mijoté de queue de boeuf</p>
                     <div class="menu__card__infos">
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <p>Et riz sauvage aux zests de citron</p>
                         <div>44€</div>
                     </div>
                 </div>
@@ -77,23 +84,23 @@
             <article class="menu">
                 <h3>DESSERTS</h3>
                 <div class="menu__card">
-                    <p class="menu__card__title">Pétales de violletes glacés</p>
+                    <p class="menu__card__title">Macaron noisette et chocolat</p>
                     <div class="menu__card__infos">
-                        <p>Et purée de noisettes</p>
+                        <p>Glace au caramel brun et sel de Guérande</p>
                         <div>18€</div>
                     </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Fondant au chocolat</p>
+                    <p class="menu__card__title">Baba au rhum revisité</p>
                     <div class="menu__card__infos">
-                        <p>Revisité</p>
+                        <p>Avec son coulis de citron</p>
                         <div>22€</div>
                     </div>
                 </div>
                 <div class="menu__card">
-                    <p class="menu__card__title">Millefeuille croustillant</p>
+                    <p class="menu__card__title">Tarte au citron meringuée</p>
                     <div class="menu__card__infos">
-                        <p>Myrtilles et pâte d'amande</p>
+                        <p>Destructurée</p>
                         <div>23€</div>
                     </div>
                 </div>
