--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
         <section class="restaurant content--padding">
             <h3>Restaurant</h3>
-            <a href="#">
+            <a href="SubPages/note.html">
             <article class="restaurant__card restaurant__card--new">
                 <div class="restaurant__card__img"></div>
                 <div class="restaurant__card__info">
@@ -55,7 +55,7 @@
                 </div>
             </article>
             </a>
-            <a href="french.html">
+            <a href="SubPages/french.html">
                 <article class="restaurant__card restaurant__card--new">
                     <div class="restaurant__card__img"></div>
                     <div class="restaurant__card__info">
