--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
             </article>
             </a>
-            <a href="#">
+            <a href="SubPages/palette.html">
             <article class="restaurant__card">
                 <div class="restaurant__card__img"></div>
                 <div class="restaurant__card__info">
