--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                 </article>
             </a>
-            <a href="#">
+            <a href="SubPages/sens.html">
             <article class="restaurant__card">
                 <div class="restaurant__card__img"></div>
                 <div class="restaurant__card__info">
