Fix titles names

--- a/SubPages/palette.html
+++ b/SubPages/palette.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ohmyfood - A la française</title>
+    <title>Ohmyfood - La palette du goût</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&family=Shrikhand&display=swap"
@@ -18,7 +18,7 @@
 <div class="presentation__img"></div>
 <main class="detail" >
     <div class="detail__title">
-        <h2>À la française</h2>
+        <h2>La palette du goût</h2>
         <i class=" fa-regular fa-heart"></i>
     </div>
     <section class="content--padding--soft">
