menu__card animation

--- a/SubPages/french.html
+++ b/SubPages/french.html
@@ -25,10 +25,15 @@
             <article class="menu">
                 <h3>ENTRÉES</h3>
                 <div class="menu__card">
-                    <p class="menu__card__title">Tartare de poulpe acidulé</p>
-                    <div class="menu__card__infos">
-                        <p>Au zeste d'orange</p>
-                        <div>25€</div>
+                    <div class="menu__card__cont">
+                        <p class="menu__card__cont__title">Tartare de poulpe acidulé</p>
+                        <div class="menu__card__cont__infos">
+                            <p>Au zeste d'orange</p>
+                            <div>25€</div>
+                        </div>
+                    </div>
+                    <div class="menu__card__validate">
+                        <i class="fa-solid fa-check"></i>
                     </div>
                 </div>
                 <div class="menu__card">
